# open-repo

./: .gitignore  .last-daily-notify  =1.11.0  A11Y_AUDIT_FINDINGS_REPORT_TEMPLATE.md  A11Y_AUDIT_RESULTS.md  AUTONOMOUS_SETUP.md  BLOCKED.md  CHECKIN.md  CHECKIN_SESSION_1478.md  CHECKPOINT_STATUS_MAY22.md  CLAUDE.md  CONTINGENCY_PLANS.md  CRITICAL_DECISIONS_JUNE_3_EOD.md  CROSS_PROJECT_INTERDEPENDENCY_RISK_ASSESSMENT.md  DAY_7_ENGAGEMENT_OUTCOME_SCENARIOS.md  DAY_7_GO_NO_GO_DECISION_CHECKLIST.md  DEADLINE_MONITORING_BRIEF_MAY26.md  DECISION_BRIEF_PATH_SELECTION.md  DECISION_MATRIX.md  DEPLOYMENT_DECISION_SCORECARD.md  DEPLOYMENT_INCIDENT_RESPONSE_PLAYBOOK.md  DEPLOYMENT_JUNE12_COMMUNICATION_TEMPLATES.md  DEPLOYMENT_JUNE12_RISK_MITIGATION.md  DEPLOYMENT_JUNE24_REALTIME_STREAM_FIX.md  DEPLOYMENT_JUNE_12_FINAL_PROCEDURES.md  DEPLOYMENT_JUNE_12_OUTCOME_VERIFICATION.md  DEPLOYMENT_JUNE_12_RUNBOOK.md  DEPLOYMENT_POST_INCIDENT_AUDIT_CHECKLIST.md  DEPLOYMENT_RUNBOOK_SELECTOR.md  DEPLOYMENT_SUCCESS_CRITERIA_AND_VALIDATION.md  DEPLOY_READY  DIFFERENTIAL_SYNC_PROTOCOL.md  DOMAIN_39_CHECKPOINT_DATES.txt  DOMAIN_51_URGENT_SEND_NOW.md  DOMAIN_56_MAY28_EXECUTION_CHECKLIST.md  DOMAIN_59_TIER_2_REASSESSMENT_SUMMARY.md  DOMAIN_59_TIER_2_SEND_TEMPLATES.md  EXIT_MODEL_BACKTEST_APPROACH.md  EXIT_MODEL_BACKTEST_EXECUTION_RUNBOOK.md  EXIT_MODEL_DATA_VALIDATION_PIPELINE.md  (+144 more)
backend/: API.md  Makefile  README.md  pyproject.toml
backend/alembic/versions/: 001_add_federation_partners.py  002_add_federation_conflicts.py
backend/app/: __init__.py  a11y_docs.py  http_signatures.py  main.py  models.py  routes.py  schemas.py
backend/app/api/v1/: export.py  opds.py
backend/app/services/: __init__.py  endorsement_propagation_service.py  endorsement_service.py  federation_conflict_service.py  federation_partner_service.py  search_service.py
backend/app/services/export/: __init__.py  export_service.py  opds_generator.py  zim_writer.py
backend/reports/: axe_cli_baseline.json  axe_cli_baseline.txt
backend/tests/: __init__.py  conftest.py  test_a11y_axecore.py  test_a11y_dom_semantics.py  test_federation_inbox_integration.py  test_federation_partner_routes.py  test_phase52_schemas.py  test_routes.py  test_wave3_endorsement_propagation.py
backend/tests/integration/: __init__.py  test_export_pipeline.py  test_export_service.py
projects/containerized-agents/: .env.template  Makefile  OPTION_A_IMPLEMENTATION_SPEC.md  REQUIREMENTS_ANALYSIS.md  SECURITY_AUDIT_FIX.md  docker-compose.arm64.yml  docker-compose.test.yml  docker-compose.yml  pyproject.toml  pytest.ini  requirements.md
projects/containerized-agents/agentcore/: __init__.py  config.py  logging_config.py  metrics.py  models.py  server.py
projects/containerized-agents/docker/: Dockerfile.agentcore  Dockerfile.wizard
projects/containerized-agents/docs/: end-user-deployment-guide.md  jetson-deployment.md  operator-setup-guide.md
projects/containerized-agents/load-tests/: Makefile  README.md  agent_crud.js  chat_load.js  concurrent_sessions.js  config.js  rate_limit.js
projects/containerized-agents/scripts/: build_compose_bundle.sh  build_os_image.sh
projects/containerized-agents/security/: requirements.txt
projects/containerized-agents/tests/: README.md  conftest.py
projects/containerized-agents/update_server/: README.md  example_manifest.json  manifest_schema.json  publish_release.py
projects/containerized-agents/wizard/: app.py  config.py  requirements.txt  state.py
projects/open-source-rideshare/backend/: README.md  alembic.ini  docker-compose.test.yml  pyproject.toml
(+4362 files in other folders)
