[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agentcore"
version = "0.1.0"
description = "AgentCore — lightweight real-time event-driven orchestration layer for containerized AI agents"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "openai>=1.50.0",
    "openai-agents>=0.0.5",
    "asyncpg>=0.29.0",
    "redis[asyncio]>=5.0.0",
    "httpx>=0.27.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "prometheus-client>=0.20.0",
    "python-json-logger>=2.0.7",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.0.0",
    "pytest-docker>=3.1.0",
    "chromadb>=0.5.0",
    "ruff>=0.4.0",
    "pyright>=1.1.0",
    "httpx>=0.27.0",
]

[tool.hatch.build.targets.wheel]
packages = ["agentcore"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.pyright]
pythonVersion = "3.10"
include = ["agentcore"]
